update ver